            monotone will now keep the database open between commands.

	- The Lua-based contributed Monotone extension introduced in
	  0.38 haven't been added to the tarball; this has been fixed.
 
        New features

        - New 'mtn ls duplicates' command which lets you list
          duplicated files in a given revision or the workspace.

        Internal

        - Update Botan to 1.7.12.


Wed Sep  3 21:13:18 UTC 2008

        0.41 release.

        Changes

        - 'mtn clone' now takes a branch argument rather than a branch
          option which is more what people expect given the fact that
          mtn push/pull/sync do not use a branch option either.

        - 'mtn automate inventory' will show the birth revision for
          any file that has been committed.

        Bugs fixed

        - If the options '--db' or '--keydir' were previously
          specified for a command which was executed inside a
          workspace and one or both option arguments were invalid
          (f.e. invalid paths), they were still written to
          _MTN/options of the particular workspace.  This lead to
          errors on any subsequent command which used these
          options. This bug is fixed in so far that basic file type
          checks are applied on both options, so its no longer
          possible to set non-existing paths accidentally or use a
          path to a directory as option argument for '--db'.

        - If a key clash occurs on a netsync operation, i.e. two
          different keys with the same key id are encountered, mtn now
          fails cleanly and provides further guidance how to proceed.

        - It was previously not possible to clone a branch / database
          anonymously; this has been fixed.

        - If the client tries to use an unknown key, try to fall back
          to anonymous pull instead of failing immediately.

        - 'mtn automate identify' was broken in 0.40 when used over